fixed Safari bug where webkit blur was causing flickering on hover

--- a/app/assets/stylesheets/new/listen_live.css.scss
+++ b/app/assets/stylesheets/new/listen_live.css.scss
@@ -16,8 +16,10 @@
     height: 70%; // 560 / 800
     overflow: hidden;
     position: relative; 
-    transition: filter 0.7s ease;
     -webkit-filter: blur(0px);
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
 
     &.backdrop {
 
